--- a/about_us.html
+++ b/about_us.html
@@ -16,111 +16,197 @@
   </head>
 
   <body>
-    <header></header>
+    <header>
+      <div class="header-wrapper">
+        <figure class="logo">
+          <a href="index.html"
+            ><img src="images\cms-logo.png" alt="Community Science Museum logo"
+          /></a>
+        </figure>
+        <nav aria-label="icons" class="icons">
+          <figure>
+            <a href=""><span class="fa fa-search icon"></span></a>
+          </figure>
+          <figure>
+            <a href=""><span class="fa fa-ticket-alt icon"></span></a>
+          </figure>
+          <figure>
+            <a href=""><span class="fa fa-user-circle icon"></span></a>
+          </figure>
+        </nav>
+      </div>
+      <nav aria-label="menu" class="menu">
+        <ul class="small-screen">
+          <label class="hamburger-label" for="hamburger-menu"
+            ><span class="fa fa-bars"></span>
+            <p id="menu">MENU</p></label
+          >
+          <input type="checkbox" id="hamburger-menu" />
+          <li><a href="exhibitions.html">EXHIBITIONS</a></li>
+          <li><a href="explore.html">EXPLORE</a></li>
+          <li><a href="get_involved.html">GET INVOLVED</a></li>
+          <li id="visit"><a href="visit.html">VISIT</a></li>
+        </ul>
+        <ul class="large-screen">
+          <li>
+            <a href="exhibitions.html">EXHIBITIONS</a>
+          </li>
+
+          <!-- <ul class="dropdown">
+            <p>Our Exhibition Spaces Include:</p>
+            <li>Cosmology</li>
+            <li>Evolution</li>
+            <li>Biology & Medicine</li>
+            <li>Robotics & AI</li>
+            <li>Ecology</li>
+          </ul> -->
+          <li><a href="explore.html">EXPLORE</a></li>
+          <!-- <ul class="dropdown">
+            <p>Learn more about what have on offer, wheter you are a:</p>
+            <li>Kid</li>
+            <li>Parent</li>
+            <li>Teacher</li>
+            <li>Researcher</li>
+          </ul> -->
+          <li>
+            <a href="get_involved.html">GET INVOLVED</a>
+          </li>
+          <!-- <ul class="dropdown">
+            <p>Do you want to support the museum?:</p>
+            <li>Donations</li>
+            <li>Volunteering</li>
+            <li>Internships</li>
+          </ul> -->
+          <li><a href="visit.html">VISIT</a></li>
+          <!-- <ul class="dropdown">
+            <p>Information about:</p>
+            <li>Admission</li>
+            <li>Location</li>
+            <li>Hours</li>
+            <li>Accessibility</li>
+            <li>Food and Drink</li>
+            <li>Shop</li>
+          </ul> -->
+        </ul>
+      </nav>
+    </header>
 
     <main>
-      <section>
-        <h1>LET US EXPLORE TOGETHER</h1>
-        <div>
-          <p>
-            "Come join us at the Community Science Museum where we’re committed
-            to making science accessible to all"
-          </p>
+      <div class="main-wrapper">
+        <section class="vision">
+          <h1>LET US EXPLORE TOGETHER</h1>
+          <div class="vision blue">
+            <p>
+              "Come join us at the Community Science Museum where we’re
+              committed to making science accessible to all"
+            </p>
+          </div>
+          <figure class="vision">
+            <img src="images\together.jpg" alt="" />
+          </figure>
+          <div class="vision">
+            <p>
+              We believe science should not be confined to the textbook, but
+              brought to live through exhibits. This is why we have over 1000
+              different exhibits on the many varied subjects of science to
+              explore.
+            </p>
+            <p>
+              Many of these exhibits are designed for you to interact with and
+              play around to see science come to life (apart from the dinosaur
+              exhibits – they only come to life at night when everyone’s gone
+              home).
+            </p>
+          </div>
+          <div class="vision">
+            <p>
+              Over the course of human history, science has developed from our
+              early understanding of fire, wind, water, and earth to exploring
+              everything from galaxies far away to the very building blocks of
+              life itself.
+            </p>
+          </div>
+          <div class="vision">
+            <p>
+              The aim of our museum is to create a space where everyone can
+              experience the wonders of our discoveries and perhaps even ignite
+              a lifelong passion to continue the exploration of the world around
+              us.
+            </p>
+          </div>
+          <div class="get-in-touch">
+            <p>
+              If any of These descriptions sounds like you, please get in touch
+            </p>
+            <a href=""><p class="button">GET IN TOUCH</p></a>
+          </div>
+        </section>
+        <section class="tourguides">
+          <h4>Meet Our Passonate Tourguides</h4>
+          <div class="image-wrapper">
+            <div class="tourguide">
+              <img src="images\charles.png" alt="" />
+              <figcaption>CHARLES</figcaption>
+            </div>
+            <div class="tourguide">
+              <img src="images\marie.png" alt="" />
+              <figcaption>MARIE</figcaption>
+            </div>
+            <div class="tourguide">
+              <img src="images\rosalind.png" alt="" />
+              <figcaption>ROSALIND</figcaption>
+            </div>
+            <div class="tourguide">
+              <img src="images\alexander.png" alt="" />
+              <figcaption>ALEXANDER</figcaption>
+            </div>
+            <div class="tourguide">
+              <img src="images\isaac.png" alt="" />
+              <figcaption>ISAAC</figcaption>
+            </div>
+            <div class="tourguide">
+              <img src="images\albert.png" alt="" />
+              <figcaption>ALBERT</figcaption>
+            </div>
+            <div class="tourguide">
+              <img src="images\rhonda.png" alt="" />
+              <figcaption>RHONDA</figcaption>
+            </div>
+          </div>
+          <p class="tourguides">"We Hope to See You Soon"</p>
+        </section>
+        <div class="newsletter-wrapper">
+          <div class="blur">
+            <section class="newsletter">
+              <p>
+                Sign up to our Newsletter and be the first to know about Our
+                exciting New stuff:
+              </p>
+              <form action="form-success.php" method="get" class="newsletter">
+                <input
+                  id="newsletter"
+                  type="text"
+                  name="email"
+                  placeholder="YOUR EMAIL"
+                />
+                <input
+                  id="sign-up"
+                  type="submit"
+                  name="subscribe"
+                  value="SIGN UP"
+                />
+              </form>
+            </section>
+          </div>
         </div>
-        <div>
-          <p>
-            We believe science should not be confined to the textbook, but
-            brought to live through exhibits. This is why we have over 1000
-            different exhibits on the many varied subjects of science to
-            explore.
-          </p>
-          <p>
-            Many of these exhibits are designed for you to interact with and
-            play around to see science come to life (apart from the dinosaur
-            exhibits – they only come to life at night when everyone’s gone
-            home).
-          </p>
-        </div>
-        <div>
-          <p>
-            Over the course of human history, science has developed from our
-            early understanding of fire, wind, water, and earth to exploring
-            everything from galaxies far away to the very building blocks of
-            life itself.
-          </p>
-        </div>
-        <div>
-          <p>
-            The aim of our museum is to create a space where everyone can
-            experience the wonders of our discoveries and perhaps even ignite a
-            lifelong passion to continue the exploration of the world around us.
-          </p>
-        </div>
-        <figure><img src="images\together.jpg" alt="" /></figure>
-        <div class="get-in-touch">
-          <h3>
-            If any of these descriptions sounds like you, please don't hesitate
-            to get in touch
-          </h3>
-          <a href=""><p>GET IN TOUCH</p></a>
-        </div>
-      </section>
-      <section>
-        <h4>Meet Our Passonate Tourguides</h4>
-        <div class="image-wrapper">
-          <figure>
-            <img src="images\charles.png" alt="" />
-            <figcaption>CHARLES</figcaption>
-          </figure>
-          <figure>
-            <img src="images\marie.png" alt="" />
-            <figcaption>MARIE</figcaption>
-          </figure>
-          <figure>
-            <img src="images\rosalind.png" alt="" />
-            <figcaption>ROSALIND</figcaption>
-          </figure>
-          <figure>
-            <img src="images\alexander.png" alt="" />
-            <figcaption>ALEXANDER</figcaption>
-          </figure>
-          <figure>
-            <img src="images\isaac.png" alt="" />
-            <figcaption>ISAAC</figcaption>
-          </figure>
-          <figure>
-            <img src="images\albert.png" alt="" />
-            <figcaption>ALBERT</figcaption>
-          </figure>
-          <figure>
-            <img src="images\rhonda.png" alt="" />
-            <figcaption>RHONDA</figcaption>
-          </figure>
-        </div>
-        <p>"We Hope to See You Soon"</p>
-      </section>
-      <section class="newsletter">
-        <p>
-          Sign up to our Newsletter and be the first to know about Our exciting
-          New stuff:
-        </p>
-        <form action="form-success.php" method="get" class="newsletter">
-          <input
-            id="newsletter"
-            type="text"
-            name="email"
-            placeholder="YOUR EMAIL"
-          />
-          <input id="join" type="submit" name="subscribe" value="SIGN UP" />
-        </form>
-      </section>
+      </div>
     </main>
 
     <footer>
       <div class="footer-wrapper">
         <div class="footer-container">
           <h6>CONNECT:</h6>
-          <ul>
+          <ul class="connect">
             <li>
               <a href="www.facebook.com"
                 ><span class="fa fa-facebook-f"></span
@@ -141,44 +227,50 @@
         </div>
         <div class="footer-container">
           <h6>HOURS:</h6>
-          <ul>
-            <li>Monday:</li>
-            <li>Tuesday:</li>
-            <li>Wednesday:</li>
-            <li>Thursday:</li>
-            <li>Friday:</li>
-            <li>Saturday:</li>
-            <li>Sunday:</li>
-          </ul>
-          <ul>
-            <li>Closed</li>
-            <li>10:00 - 16:00</li>
-            <li>10:00 - 16:00</li>
-            <li>10:00 - 16:00</li>
-            <li>10:00 - 19:00</li>
-            <li>09:00 - 16:00</li>
-            <li>09:00 - 13:00</li>
-          </ul>
+          <div class="hours-wrapper">
+            <ul class="hours">
+              <li>Monday:</li>
+              <li>Tuesday:</li>
+              <li>Wednesday:</li>
+              <li>Thursday:</li>
+              <li>Friday:</li>
+              <li>Saturday:</li>
+              <li>Sunday:</li>
+            </ul>
+            <ul>
+              <li>Closed</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 19:00</li>
+              <li>09:00 - 16:00</li>
+              <li>09:00 - 13:00</li>
+            </ul>
+          </div>
         </div>
         <div class="footer-container">
-          <h6>LOCATION:</h6>
-          <p>Nygårdsgaten 112</p>
-          <p>5008 Bergen, Norway</p>
-          <a href="visit.html"
-            ><span class="fa fa-map-marker-alt"><p>Getting Here</p></span></a
+          <div>
+            <h6>LOCATION:</h6>
+            <p>Nygårdsgaten 112</p>
+            <p>5008 Bergen, Norway</p>
+          </div>
+          <a href="visit.html" class="location"
+            ><span class="fa fa-map-marker-alt"></span>
+            <p>Getting Here</p></a
           >
         </div>
         <div class="footer-container">
           <h6>CONTACT & SUPPORT:</h6>
-          <ul>
-            <a href="about_us.html">About Us</a>
-            <a href="visit.html">Facilities</a>
-            <p>Email: contact@cms.com</p>
-            <p>Phone: 500 55 555</p>
-            <p>Community Science Museum 2020</p>
+          <ul class="contact">
+            <li><a href="about_us.html">About Us</a></li>
+            <li><a href="visit.html">Facilities</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><p>Email: contact@cms.com</p></li>
+            <li><p>Phone: 500 55 555</p></li>
           </ul>
         </div>
       </div>
+      <p id="copyright">Community Science Museum 2020</p>
     </footer>
   </body>
 </html>
