general updates to CSS

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -26,15 +26,15 @@
           /></a>
         </figure>
         <nav aria-label="icons" class="icons">
-          <figure>
+          <div>
             <a href=""><span class="fa fa-search icon"></span></a>
-          </figure>
-          <figure>
+          </div>
+          <div>
             <a href=""><span class="fa fa-ticket-alt icon"></span></a>
-          </figure>
-          <figure>
+          </div>
+          <div>
             <a href=""><span class="fa fa-user-circle icon"></span></a>
-          </figure>
+          </div>
         </nav>
       </div>
         <nav aria-label="menu" class="menu">
@@ -97,7 +97,7 @@
       <div class="main-wrapper">
         <section class="main-content">
           <h1>
-            Our More Than 1000 Different Exhibits Are Divided Between 5 Spaces
+          1000 Different Exhibits, 5 Exhibit Spaces
           </h1>
           <div class="card">
             <h2 id="cosmology">COSMOLOGY</h2>
