--- a/get_involved.html
+++ b/get_involved.html
@@ -26,15 +26,15 @@
           /></a>
         </figure>
         <nav aria-label="icons" class="icons">
-          <figure>
+          <div>
             <a href=""><span class="fa fa-search icon"></span></a>
-          </figure>
-          <figure>
+          </div>
+          <div>
             <a href=""><span class="fa fa-ticket-alt icon"></span></a>
-          </figure>
-          <figure>
+          </div>
+          <div>
             <a href=""><span class="fa fa-user-circle icon"></span></a>
-          </figure>
+          </div>
         </nav>
       </div>
       <nav aria-label="menu" class="menu">
