--- a/about_us.html
+++ b/about_us.html
@@ -24,15 +24,15 @@
           /></a>
         </figure>
         <nav aria-label="icons" class="icons">
-          <figure>
+          <div>
             <a href=""><span class="fa fa-search icon"></span></a>
-          </figure>
-          <figure>
+          </div>
+          <div>
             <a href=""><span class="fa fa-ticket-alt icon"></span></a>
-          </figure>
-          <figure>
+          </div>
+          <div>
             <a href=""><span class="fa fa-user-circle icon"></span></a>
-          </figure>
+          </div>
         </nav>
       </div>
       <nav aria-label="menu" class="menu">
@@ -94,7 +94,7 @@
     <main>
       <div class="main-wrapper">
         <section class="vision">
-          <h1>LET US EXPLORE TOGETHER</h1>
+          <h1>"LET US EXPLORE TOGETHER"</h1>
           <div class="vision blue">
             <p>
               "Come join us at the Community Science Museum where we’re
@@ -105,6 +105,7 @@
             <img src="images\together.jpg" alt="" />
           </figure>
           <div class="vision">
+            <h5>We belive Science should be Fun</h5>
             <p>
               We believe science should not be confined to the textbook, but
               brought to live through exhibits. This is why we have over 1000
@@ -119,6 +120,7 @@
             </p>
           </div>
           <div class="vision">
+            <h5>History of Science</h5>
             <p>
               Over the course of human history, science has developed from our
               early understanding of fire, wind, water, and earth to exploring
@@ -127,6 +129,7 @@
             </p>
           </div>
           <div class="vision">
+            <h5>Our Vision</h5>
             <p>
               The aim of our museum is to create a space where everyone can
               experience the wonders of our discoveries and perhaps even ignite
