--- a/explore.html
+++ b/explore.html
@@ -24,15 +24,15 @@
           /></a>
         </figure>
         <nav aria-label="icons" class="icons">
-          <figure>
+          <div>
             <a href=""><span class="fa fa-search icon"></span></a>
-          </figure>
-          <figure>
+          </div>
+          <div>
             <a href=""><span class="fa fa-ticket-alt icon"></span></a>
-          </figure>
-          <figure>
+          </div>
+          <div>
             <a href=""><span class="fa fa-user-circle icon"></span></a>
-          </figure>
+          </div>
         </nav>
       </div>
       <nav aria-label="menu" class="menu">
@@ -112,16 +112,21 @@
         <section class="clubs">
           <div class="margins">
             <h4>Join a Childrens Club</h4>
+            <h5>Young Stars Club</h5>
             <p>
-              We also have the Young Stars Club which meets once a week on a
-              Saturday between 10:00 and 13:00 where you’ll get to explore and
-              experiment with our team of experts.
+              We also have the <em>Young Stars Club</em> which meets once a week
+              on a Saturday between 10:00 and 13:00 where you’ll get to explore
+              and experiment with our team of experts.
+            </p>
+            <h5>The Holiday Club</h5>
+            <p>
+              During the school holidays we run <em>The Holiday Club</em> where
+              you can join other children your age to go on a journey of
+              discovery. Each holiday we pick a new theme to explore.
             </p>
             <p>
-              During the school holidays we run The Holiday Club where you can
-              join other children your age to go on a journey of discovery. Each
-              holiday we pick a new theme to explore. To find out more about the
-              holiday club and how you can join, send us a message.
+              To find out more about The Young Stars Club or The Holiday Club
+              and how you can join, send us a message.
             </p>
           </div>
         </section>
@@ -137,14 +142,18 @@
           <div class="margins">
             <h3>For Teachers</h3>
             <p>
-              Are you a young person looking to learn more about science? Come
-              on down to our museum, there’s plenty to see and do.
+              As a community-driven museum, we want to work with schools to
+              create places of learning and exploring. .
             </p>
             <p>
-              You can learn about Newtonian physics from our bumper swing, or
-              why not travel back in time and meet our resident Woolly Mammoth?
-              Our exhibits are designed to be accessible for interested minds,
-              so make sure you come ready to learn and explore.
+              Our team are on hand to give your students guided tours of the
+              museum, teach them in our learning laboratory, and provide great
+              video presentations that will excite and inspire them
+            </p>
+            <p>
+              Please get in touch with us here to find out more about our
+              facilities and to arrange a time to bring your students through
+              for a visit.
             </p>
           </div>
         </section>
@@ -152,15 +161,14 @@
           <div class="margins">
             <h3>For Researchers</h3>
             <p>
-              We also have the Young Stars Club which meets once a week on a
-              Saturday between 10:00 and 13:00 where you’ll get to explore and
-              experiment with our team of experts.
+              Are you looking to get involved with our team of researchers and
+              academics?
             </p>
             <p>
-              During the school holidays we run The Holiday Club where you can
-              join other children your age to go on a journey of discovery. Each
-              holiday we pick a new theme to explore. To find out more about the
-              holiday club and how you can join, send us a message.
+              Our museum offers various ways for you to use our resources and
+              contribute towards them. We have online records, laboratory space,
+              and a working relationship with a number of universities around
+              the country.
             </p>
           </div>
         </section>
