--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
           /></a>
         </figure>
         <nav aria-label="icons" class="icons">
-          <figure>
+          <div>
             <a href=""><span class="fa fa-search icon"></span></a>
-          </figure>
-          <figure>
+          </div>
+          <div>
             <a href=""><span class="fa fa-ticket-alt icon"></span></a>
-          </figure>
-          <figure>
+          </div>
+          <div>
             <a href=""><span class="fa fa-user-circle icon"></span></a>
-          </figure>
+          </div>
         </nav>
       </div>
 
@@ -98,8 +98,8 @@
           <section class="main-content">
             <hgroup>
               <h1>EXPLORE 1000+ EXHIBITIONS</h1>
-              <h2>entrance is FREE FOR ALL</h2>
-              <h2>GUIDED TOUR starting every hour</h2>
+              <h2>entrance is <em>FREE FOR ALL</em></h2>
+              <h2><em>GUIDED TOUR</em> starting every hour</h2>
             </hgroup>
             <div class="clock">
               <span class="fa fa-clock"></span>
@@ -113,7 +113,7 @@
           </section>
           <aside>
             <div class="bubble">
-              <a href="about-us.html">
+              <a href="about_us.html">
                 <h3>"Let us Explore Together"</h3>
                 <div>
                   <p>Learn more ABOUT US and our VISON</p>
