--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
           /></a>
         </figure>
         <nav aria-label="icons" class="icons">
-          <label class="ticket-label" for="search-box">
+          <label class="search-label" for="search-box">
             <span class="fa fa-search icon"></span>
           </label>
           <input type="checkbox" id="search-box" />
           <div class="search-dropdown">
-            <p class="dropdown-header">SEARCH RESULTS</p>
+            <p class="search-header">SEARCH RESULTS</p>
             <form action="">
               <label for="search" class="label">Search</label>
               <input
@@ -51,7 +51,7 @@
           </label>
           <input type="checkbox" id="ticket-box" />
           <div class="ticket-dropdown">
-            <p class="dropdown-header">BUY TICKET</p>
+            <p class="ticket-header">BUY TICKET</p>
             <form action="">
               <p class="dropdown-text">
                 Please Choose the Desired Number of Tickets and Click Proceed
@@ -66,7 +66,7 @@
                 <option value="more">6 or more</option>
               </select>
             </form>
-            <p class="dropdown-button">PROCEED</p>
+            <p class="ticket-button">PROCEED</p>
           </div>
 
           <label class="profile-label" for="profile-box">
@@ -74,7 +74,7 @@
           </label>
           <input type="checkbox" id="profile-box" />
           <div class="profile-dropdown">
-            <p class="dropdown-header">YOUR ACCOUNT</p>
+            <p class="profile-header">YOUR ACCOUNT</p>
             <form action="login.php" method="GET">
               <label for="email" class="label">E-mail</label>
               <input
@@ -96,12 +96,10 @@
                 id="choose"
               />
             </form>
-            <p class="dropdown-button">SIGN IN</p>
+            <p class="profile-button">SIGN IN</p>
           </div>
         </nav>
       </div>
-
-      <form action=""></form>
 
       <nav aria-label="menu" class="menu">
         <ul class="small-screen">
