--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                 placeholder="Start Writing..."
                 id="search"
                 class="box"
-                required="required"
               />
             </form>
             <p class="dropdown-text">
@@ -66,7 +65,7 @@
                 <option value="more">6 or more</option>
               </select>
             </form>
-            <p class="ticket-button">PROCEED</p>
+            <button class="ticket">PROCEED</button>
           </div>
 
           <label class="profile-label" for="profile-box">
@@ -96,13 +95,13 @@
                 id="choose"
               />
             </form>
-            <p class="profile-button">SIGN IN</p>
+            <button class="profile">SIGN IN</button>
           </div>
         </nav>
       </div>
 
       <nav aria-label="menu" class="menu">
-        <ul class="small-screen">
+        <ul class="mobile-menu">
           <label class="hamburger-label" for="hamburger-menu"
             ><span class="fa fa-bars"></span>
             <p id="menu">MENU</p></label
