Major updates to exhibit page

--- a/about_us.html
+++ b/about_us.html
@@ -158,8 +158,8 @@
 
     <main>
       <div class="main-wrapper">
+        <h1>"let us explore together"</h1>
         <section class="vision">
-          <h1>"LET US EXPLORE TOGETHER"</h1>
           <div class="vision blue">
             <p>
               "Come join us at the Community Science Museum where we’re
