--- a/exhibitions.html
+++ b/exhibitions.html
@@ -160,10 +160,11 @@
 
     <main>
       <div class="main-wrapper">
-        <section class="main-content">
-          <h1>
-          1000 Different Exhibits, 5 Exhibit Spaces
+        <h1>
+          1000 Different Exhibits <br> 
+          5 Exhibit Spaces
           </h1>
+        <section class="main-content">
           <div class="card">
             <h2 id="cosmology">COSMOLOGY</h2>
             <div class="cosmology">
@@ -182,6 +183,7 @@
             </div>
           </div>
           <span class="fa fa-arrow-circle-right"></span>
+          <span class="fa fa-arrow-circle-down purple"></span>
           <figure class="card">
             <img src="images\cosmology.jpg" alt="" />
           </figure>
@@ -204,6 +206,7 @@
             </div>
           </div>
           <span class="fa fa-arrow-circle-left"></span>
+          <span class="fa fa-arrow-circle-down blue"></span>
           <figure class="card">
             <img src="images\evolution.jpg" alt="" />
           </figure>
@@ -226,7 +229,9 @@
             </div>
           </div>
           <span class="fa fa-arrow-circle-right"></span>
+          <span class="fa fa-arrow-circle-down dark-green"></span>
           <figure class="card"><img src="images\biology.jpg" alt="" /></figure>
+          
           <div class="card">
             <h2 id="robotics">ROBOTICS & AI</h2>
             <div class="robotics">
@@ -242,8 +247,10 @@
               </p>
             </div>
           </div>
-          <figure class="card"><img src="images\robotics.jpg" alt="" /></figure>
           <span class="fa fa-arrow-circle-left"></span>
+          <span class="fa fa-arrow-circle-down orange"></span>
+          <figure class="card"><img src="images\robotics.jpg" alt="" /></figure>
+         
           <div class="card">
             <h2 id="ecology">ECOLOGY</h2>
             <div class="ecology">
@@ -256,16 +263,20 @@
             </div>
           </div>
           <span class="fa fa-arrow-circle-left"></span>
+          <span class="fa fa-arrow-circle-down magenta"></span>
           <figure class="card"><img src="images\ecology.jpg" alt="" /></figure>
         </section>
         <section class="photo-gallery">
-          <h3>Come Visit Us and Continoue Your Exploration</h3>
-          <figure><img src="" alt="" /></figure>
-          <figure><img src="" alt="" /></figure>
-          <figure><img src="" alt="" /></figure>
-          <figure><img src="" alt="" /></figure>
-          <figure><img src="" alt="" /></figure>
-          <figure><img src="" alt="" /></figure>
+          <h3>Come Visit Us and Continue Your Exploration</h3>
+          <div class="image-wrapper">
+          <div><img src="../images/gallery-1.jpg" alt="" /></div>
+          <div><img src="../images/gallery-2.jpg" alt="" /></div>
+          <div><img src="../images/gallery-3.jpg" alt="" /></div>
+          <div><img src="../images/gallery-4.jpg" alt="" /></div>
+          <div><img src="../images/gallery-5.jpg" alt="" /></div>
+          <div><img src="../images/gallery-6.jpg" alt="" /></div>
+        </div>
+        <p class="visit">"We Hope to See You Soon"</p>
         </section>
 
         <div class="newsletter-wrapper">
