--- a/about_us.html
+++ b/about_us.html
@@ -170,7 +170,7 @@
             <img src="images\together.jpg" alt="" />
           </figure>
           <div class="vision">
-            <h5>We belive Science should be Fun</h5>
+            <h5>Science should be Fun</h5>
             <p>
               We believe science should not be confined to the textbook, but
               brought to live through exhibits. This is why we have over 1000
