--- a/exhibitions.html
+++ b/exhibitions.html
@@ -161,8 +161,7 @@
     <main>
       <div class="main-wrapper">
         <h1>
-          1000 Different Exhibits <br> 
-          5 Exhibit Spaces
+          Our Exhibits are Diveded Into 5 Spaces
           </h1>
         <section class="main-content">
           <div class="card">
@@ -276,7 +275,7 @@
           <div><img src="../images/gallery-5.jpg" alt="" /></div>
           <div><img src="../images/gallery-6.jpg" alt="" /></div>
         </div>
-        <p class="visit">"We Hope to See You Soon"</p>
+        <p class="visit">"More Than 1000 Exhibits to Explore"</p>
         </section>
 
         <div class="newsletter-wrapper">
