--- a/index.html
+++ b/index.html
@@ -236,10 +236,17 @@
       </div>
       <div class="secondary-container">
         <section class="news">
-          <h4>NEWS: Special Events and Exhibitions</h4>
+          <h4>NEWS: Special Events & Exhibitions</h4>
           <figure class="news">
             <img src="images\t-rex.jpg" alt="" />
           </figure>
+          <div class="angle-wrapper">
+            <span class="fa fa-angle-left angle"></span>
+            <div></div>
+            <div></div>
+            <div></div>
+            <span class="fa fa-angle-right angle"></span>
+          </div>
           <div class="news">
             <h5>Night in the Museum</h5>
             <p>
@@ -253,7 +260,7 @@
           </div>
         </section>
         <section class="clubs">
-          <h4>Join One of our Children Clubs</h4>
+          <h4 id="clubs">Join One of our Children Clubs</h4>
           <div class="image-wrapper">
             <figure class="clubs">
               <a href=""><img src="images\club_1.jpg" alt="" /></a>
