contact page added

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -161,7 +161,7 @@
     <main>
       <div class="main-wrapper">
         <h1>
-          Our Exhibits are Diveded Into 5 Spaces
+          Our Exhibits are Divided Into 5 Spaces
           </h1>
         <section class="main-content">
           <div class="card">
@@ -366,7 +366,7 @@
           <ul class="contact">
             <li><a href="about_us.html">About Us</a></li>
             <li><a href="visit.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact & FAQ</a></li>
             <li><p>Email: contact@cms.com</p></li>
             <li><p>Phone: 500 55 555</p></li>
           </ul>
