--- a/index.html
+++ b/index.html
@@ -162,17 +162,20 @@
           <section class="main-content">
             <hgroup>
               <h1>EXPLORE 1000+ EXHIBITIONS</h1>
-              <h2>entrance is <em>FREE FOR ALL</em></h2>
-              <h2><em>GUIDED TOUR</em> starting every hour</h2>
+              <h2>
+                entrance is <br />
+                <em>FREE FOR ALL</em>
+              </h2>
+              <h2><em>GUIDED TOUR</em> <br />starting every hour</h2>
             </hgroup>
-            <div class="clock">
-              <span class="fa fa-clock"></span>
-              <p>OPEN TODAY UNTIL 16:00</p>
-            </div>
             <div class="button">
               <a href="www.ticketmaster.com">
                 <p class="button">BUY TICKETS</p></a
               >
+            </div>
+            <div class="clock">
+              <span class="fa fa-clock"></span>
+              <p>OPEN TODAY UNTIL 16:00</p>
             </div>
           </section>
           <aside>
@@ -260,15 +263,18 @@
           </div>
         </section>
         <section class="clubs">
-          <h4 id="clubs">Join One of our Children Clubs</h4>
+          <h4 id="clubs">Join One of Our Children Clubs</h4>
           <div class="image-wrapper">
             <figure class="clubs">
-              <a href=""><img src="images\club_1.jpg" alt="" /></a>
+              <a href="explore.html"><img src="images\club_1.jpg" alt="" /></a>
             </figure>
+            <figcaption>The Young Stars Club</figcaption>
             <figure class="clubs">
-              <a href=""><img src="images\club_2.jpg" alt="" /></a>
+              <a href="explore.html"><img src="images\club_2.jpg" alt="" /></a>
             </figure>
+            <figcaption>The Holiday Club</figcaption>
           </div>
+          <p>Click Images to Learn More</p>
         </section>
         <div class="newsletter-wrapper">
           <div class="blur">
@@ -359,7 +365,7 @@
           <ul class="contact">
             <li><a href="about_us.html">About Us</a></li>
             <li><a href="visit.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact & FAQ</a></li>
             <li><p>Email: contact@cms.com</p></li>
             <li><p>Phone: 500 55 555</p></li>
           </ul>
