--- a/about_us.html
+++ b/about_us.html
@@ -332,7 +332,7 @@
           <ul class="contact">
             <li><a href="about_us.html">About Us</a></li>
             <li><a href="visit.html">Facilities</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact & FAQ</a></li>
             <li><p>Email: contact@cms.com</p></li>
             <li><p>Phone: 500 55 555</p></li>
           </ul>
