--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-      Community Science Museum - Get Involved and support our museum
-    </title>
+    <title>Community Science Museum - Visit Page</title>
     <meta
       name="decription"
-      content="Support our museum with donations, becoming a volunteer or by working here through an intenship"
+      content="Information page. Learn more about admission, location, hours and our facilities"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://use.typekit.net/cgz4jxk.css" />
-    <link rel="stylesheet" href="styles/get_involved.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
     <script
       src="https://kit.fontawesome.com/fbd3401b24.js"
       crossorigin="anonymous"
@@ -160,55 +158,99 @@
 
     <main>
       <div class="main-wrapper">
-        <h1>Get involved</h1>
-        <section class="main-content">
-          <div class="support">
-            <h2>Donations</h2>
-            <p>
-              There are various ways you can support the museum. Donations are
-              very welcome and are an important way we keep this museum open and
-              accessible to the whole community.
-            </p>
-            <p>
-              You can also support us by donating items of interest to the
-              museum’s collections. If you have some item or collection that you
-              think others would enjoy, please let us know by contacting our
-              Collections Department and they will be able to assist you.
-            </p>
-          </div>
-          <div class="support">
-            <h2>Volunteer</h2>
-            <p>
-              A number of people volunteer their time and effort to keep the
-              displays in good order and ready for visitors to come and enjoy.
-              Volunteering has its perks including getting to see behind the
-              scenes of a working museum, access to staff-only lectures, and a
-              monthly lunch where all staff and volunteers come together to
-              discuss ideas for future exhibits and strategies for the museum.
-            </p>
-            <p>
-              You can help volunteer in a number of different spheres. Please
-              contact us if you’d like to find out more about how you can get
-              involved.
-            </p>
-          </div>
-          <div class="support">
-            <h2>Internships</h2>
-            <p>
-              Are you interested in working in a museum? Do you enjoy the fun
-              and excitement of sharing the wonders of nature with people?
-            </p>
-            <p>
-              Well you could be just the right person to enjoy an internship at
-              the museum.
-            </p>
-          </div>
-          <div class="get-in-touch">
-            <p>
-              If any of These descriptions sounds like you, please get in touch
-            </p>
-            <a href=""><p class="button">GET IN TOUCH</p></a>
-          </div>
+        <h1>Contact & FAQ</h1>
+        <section>
+          <p>
+            Please submit your inquiry, and we will get in touch, as soon as
+            possible.
+          </p>
+          <p>Please also see our FAQ before submitting a question.</p>
+          <form action="" method="GET">
+            <label for="name" class="label">Name</label>
+            <input
+              type="text"
+              id="name"
+              class="form"
+              placeholder="Fistname Lastname"
+            />
+          </form>
+          <form action="login.php" method="GET">
+            <label for="email_2" class="label">E-mail</label>
+            <input
+              type="email"
+              name="email"
+              placeholder="your@email.com"
+              id="email_2"
+              class="form"
+              required="required"
+            />
+          </form>
+          <form action="">
+            <label for="option" class="label">My inquiry</label>
+            <select name="tickets" id="option" class="form">
+              <option value="1">I would like to book a group tour</option>
+              <option value="1">I have a question</option>
+              <option value="1">Join a childrens club</option>
+              <option value="1">I want to donate</option>
+              <option value="1">
+                I'm a teacher who want to bring my students
+              </option>
+              <option value="1">
+                I'm a reasearcher and want to get in touch
+              </option>
+              <option value="1">I would like to join as a volunteer</option>
+              <option value="1">I would like to join on a internship</option>
+              <option value="more">Other</option>
+            </select>
+          </form>
+
+          <form action="">
+            <label for="text">Message</label>
+            <textarea name="" id="text" cols="30" rows="10" class="form">
+Write your message...</textarea
+            >
+          </form>
+          <button>SUBMIT</button>
+        </section>
+        <section>
+          <h2>Frequently Asked Questions</h2>
+          <ol class="faq">
+            <li>
+              Question about something:
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </li>
+            <li>
+              Question about something else:
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </li>
+            <li>
+              Question about jacket:
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </li>
+            <li>
+              Question about Rainy Days:
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </li>
+            <li>
+              Question Cetegorys:
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </li>
+          </ol>
         </section>
         <div class="newsletter-wrapper">
           <div class="blur">
@@ -299,7 +341,7 @@
           <ul class="contact">
             <li><a href="about_us.html">About Us</a></li>
             <li><a href="visit.html">Facilities</a></li>
-            <li><a href="contact.html">Contact & FAQ</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><p>Email: contact@cms.com</p></li>
             <li><p>Phone: 500 55 555</p></li>
           </ul>
