--- a/visit.html
+++ b/visit.html
@@ -192,7 +192,7 @@
           </div>
           <div class="info">
             <h2>Hours:</h2>
-            <div class="hours-wrapper">
+            <div class="hours-wrapper_2">
               <ul>
                 <li>Monday:</li>
                 <li>Tuesday:</li>
